--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content='width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes'>
-    <title>Unity WebGL Player | {{{ PRODUCT_NAME }}}</title>
+    <title>Unity WebGL Player | My project</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
          html{
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <script src="Build/{{{ LOADER_FILENAME }}}"></script>
+    <script src="Build/WebAR.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
@@ -73,21 +73,13 @@
                 document.getElementById("startWebcamDiv").style.display = "none";
 
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/{{{ DATA_FILENAME }}}",
-                    frameworkUrl: "Build/{{{ FRAMEWORK_FILENAME }}}",
-                #if USE_WASM
-                    codeUrl: "Build/{{{ CODE_FILENAME }}}",
-                #endif
-                #if MEMORY_FILENAME
-                    memoryUrl: "Build/{{{ MEMORY_FILENAME }}}",
-                #endif
-                #if SYMBOLS_FILENAME
-                    symbolsUrl: "Build/{{{ SYMBOLS_FILENAME }}}",
-                #endif
+                    dataUrl: "Build/WebAR.data.gz",
+                    frameworkUrl: "Build/WebAR.framework.js.gz",
+                    codeUrl: "Build/WebAR.wasm.gz",
                     streamingAssetsUrl: "StreamingAssets",
-                    companyName: {{{ JSON.stringify(COMPANY_NAME) }}},
-                    productName: {{{ JSON.stringify(PRODUCT_NAME) }}},
-                    productVersion: {{{ JSON.stringify(PRODUCT_VERSION) }}},
+                    companyName: "DefaultCompany",
+                    productName: "My project",
+                    productVersion: "0.1",
                     //webglContextAttributes: { "preserveDrawingBuffer": true },
                     // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
                     // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
